@@ -16,10 +16,15 @@
                                 Permission is granted to copy, distribute and/or modify
                                 this document under the terms of the Creative Commons
 				Attribution ShareAlike license, version 3.0.
-                                A copy of the license can be found at
+                                A summary of the license can be found at
                                 <ulink url="http://creativecommons.org/licenses/by-sa/3.0/"
                                         type="http">
                                         http://creativecommons.org/licenses/by-sa/3.0/
+                                </ulink>
+                                Full text of the license can be found at
+                                <ulink url="https://creativecommons.org/licenses/by-sa/3.0/legalcode"
+                                        type="http">
+                                        https://creativecommons.org/licenses/by-sa/3.0/legalcode
                                 </ulink>
 			</para>
 		</legalnotice>
